--- a/Q1 presidents.ipynb
+++ b/Q1 presidents.ipynb
@@ -5,116 +5,179 @@
    "id": "c47c01e4-d16a-47de-85b1-ab8d74da881b",
    "metadata": {},
    "source": [
-    "#### 1. Scrape the list of US presidents from https://en.wikipedia.org/wiki/List_of_presidents_of_the_United_StatesLinks using pandas and save them as a CSV."
+    "#### 1. Scrape the list of US presidents from https://en.wikipedia.org/wiki/List_of_presidents_of_the_United_States using pandas and save them as a CSV."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e621c766-b63a-4ff6-aec0-ca781e384a1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# in case lxml isn't installed. it wasn't for me!\n",
     "!pip install --quiet lxml html5lib\n",
-    "\n",
-    "import pandas as pd\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0766de28-af5e-400c-84a5-3385323bcd0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "url = 'https://en.wikipedia.org/wiki/List_of_presidents_of_the_United_States'\n",
     "\n",
     "dfs = pd.read_html(url)\n",
     "\n",
-    "presidents_list = dfs[0]\n",
-    "\n",
+    "presidents_list = dfs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9261e4de-5751-4566-8f5c-9242831e6a6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>No.[a]</th>\n",
+       "      <th>Portrait</th>\n",
+       "      <th>Name (birth–death)</th>\n",
+       "      <th>Term[16]</th>\n",
+       "      <th>Party[b][17]</th>\n",
+       "      <th>Party[b][17].1</th>\n",
+       "      <th>Election</th>\n",
+       "      <th>Vice President[18]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>George Washington (1732–1799) [19]</td>\n",
+       "      <td>April 30, 1789 – March 4, 1797</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Unaffiliated</td>\n",
+       "      <td>1788–891792</td>\n",
+       "      <td>John Adams[c]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>John Adams (1735–1826) [21]</td>\n",
+       "      <td>March 4, 1797 – March 4, 1801</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Federalist</td>\n",
+       "      <td>1796</td>\n",
+       "      <td>Thomas Jefferson[d]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Thomas Jefferson (1743–1826) [23]</td>\n",
+       "      <td>March 4, 1801 – March 4, 1809</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Democratic- Republican</td>\n",
+       "      <td>1800 1804</td>\n",
+       "      <td>Aaron BurrGeorge Clinton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>James Madison (1751–1836) [24]</td>\n",
+       "      <td>March 4, 1809 – March 4, 1817</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Democratic- Republican</td>\n",
+       "      <td>18081812</td>\n",
+       "      <td>George Clinton[e]Vacant after April 20, 1812El...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>James Monroe (1758–1831) [26]</td>\n",
+       "      <td>March 4, 1817 – March 4, 1825</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Democratic- Republican</td>\n",
+       "      <td>18161820</td>\n",
+       "      <td>Daniel D. Tompkins</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   No.[a]  Portrait                  Name (birth–death)  \\\n",
+       "0       1       NaN  George Washington (1732–1799) [19]   \n",
+       "1       2       NaN         John Adams (1735–1826) [21]   \n",
+       "2       3       NaN   Thomas Jefferson (1743–1826) [23]   \n",
+       "3       4       NaN      James Madison (1751–1836) [24]   \n",
+       "4       5       NaN       James Monroe (1758–1831) [26]   \n",
+       "\n",
+       "                         Term[16]  Party[b][17]          Party[b][17].1  \\\n",
+       "0  April 30, 1789 – March 4, 1797           NaN            Unaffiliated   \n",
+       "1   March 4, 1797 – March 4, 1801           NaN              Federalist   \n",
+       "2   March 4, 1801 – March 4, 1809           NaN  Democratic- Republican   \n",
+       "3   March 4, 1809 – March 4, 1817           NaN  Democratic- Republican   \n",
+       "4   March 4, 1817 – March 4, 1825           NaN  Democratic- Republican   \n",
+       "\n",
+       "      Election                                 Vice President[18]  \n",
+       "0  1788–891792                                      John Adams[c]  \n",
+       "1         1796                                Thomas Jefferson[d]  \n",
+       "2    1800 1804                           Aaron BurrGeorge Clinton  \n",
+       "3     18081812  George Clinton[e]Vacant after April 20, 1812El...  \n",
+       "4     18161820                                 Daniel D. Tompkins  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "presidents_list.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a1bae2f4-39ff-446e-a242-42fe35812df9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# select the first table\n",
-    "presidents_list.to_csv('output.csv', index=False)"
+    "presidents_list.to_csv('presidents.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a171c51-2e50-45c4-8389-73b86fd3eb38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://travel-id-documents.az.gov/authorized-third-party-driver-license-locations'\n",
-    "\n",
-    "# we're using some 'fuller' user-agent headers for this one, otherwise it doesn't really give us the table with our request.\n",
-    "headers = {\n",
-    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36'\n",
-    "}\n",
-    "print(response.status_code)\n",
-    "doc = BeautifulSoup(response.text, 'html.parser')\n",
-    "print(doc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57b8dfb1-9ee4-4c1d-aeba-c19f16d3814d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "table = doc.findall('table')\n",
-    "table_rows = table.find_all('tr')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27fa06d2-ccad-4f6b-8bce-3c0b87548b43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# make sure to omit row 1 (zero) as its just the labels in the <thead> of the <table>\n",
-    "for row in table_rows[1:]:\n",
-    "  result = []\n",
-    "  if len(row.select('a')) > 0:\n",
-    "    result.append(row.select('a')[0]['href'])\n",
-    "  else:\n",
-    "    result.append('')\n",
-    "  cells = row.select('td')\n",
-    "  for cell in cells:\n",
-    "      result.append(cell.text)\n",
-    "  data.append(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5cf98695-3a34-49d1-8439-d99c71aea0f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = []\n",
-    "df = pd.DataFrame(df, columns=[\"Link\", \"Company\",\"Address\",\"Telephone\",\"Hours\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d09af3ec-1377-4501-b1aa-e67f2266d444",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Should see the first five rows of the table here\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "faccd8d6-2c82-4ccd-af2f-791bccbd5aff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save to csv\n",
-    "df.to_csv(\"license-locations.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0766de28-af5e-400c-84a5-3385323bcd0a",
+   "id": "85a27707-457c-4b3b-8f7e-1bfbfc677112",
    "metadata": {},
    "outputs": [],
    "source": []
